# character_tracker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose-start.sh  compose.yml  db.sqlite3  hello.py  justfile  pyproject.toml  requirements.txt
config/: asgi.py  settings.py  urls.py  wsgi.py
docs/: planning_roadmap.md
templates/tracker/: character_list.html
tracker/: admin.py  models.py  settings.py  views.py
tracker/migrations/: 0001_initial.py  0002_rename_org_play_suffix_character_character_number_and_more.py  0003_scenario_character_scenario_gold_earned_and_more.py  0004_scenario_unique_character_number.py
users/migrations/: 0001_initial.py
