[project]
name = "character-tracker-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.6",
    "psycopg2-binary",
]

[tool.setuptools]
packages = ["config", "tracker", "users"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*/migrations/*",  # This excludes all migrations folders
]
